--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,8 @@ repositories {
 dependencies {
     // Use JUnit Jupiter for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+
+    testImplementation "org.mockito:mockito-core:3.+"
 }
 
 application {
